libece 0.3.1 ():
	- new host names: initialization-host, operation-host
	- ignore errors about not matching certificate/hostname
	- set a different host name for the command getConfiguration
	- bindings: use distutils for build/install

libece 0.3 (25/09/2013):
	- fix certificate request encoding
	- commands paths changed
	- digest changed to SHA1
	- Content-Type changed to -ww-form-urlencoded
	- bindings: basic swig-based python bindings
	- fixes: minor leak in Client::run; ECE_RC_TIMEOUT sometimes not being returned;
	  remove spurious getHwInfo in __name_cb(); removed old json Content-Type;
	  fix encoding of special chars not handled by addQueryItem() - e.g. newline
	- config: improved defaults handling
	- build: runtime prefix by setting ECE_PREFIX_PATH
	- test/sb += automated credential generation and SB simulator setup
	- crypto: ece_crypto_genkey() failed if no rnd file was detected
	- yocto wip: added LICENSE file
	- ece_revision() returns GIT commit ID
	- contrib: produce.sh extensions
	- SB API: getInfo returns Operation CA Cert; s/csr_tmpl/csr_template
	- added .gitignore

libece 0.2a (02/09/2013):
	- QtJson (GPL) -> QJson (LGPL)
	- contrib: produce.sh - basic keygen + csr tool
	- test/sb += double-CA/SNI test case
	- SB Json error logging
	- SB API: POST plain string parameters instead of Json

libece 0.1a (16/08/2013):
	- first alpha release for testing/integration