@@ -31,6 +31,7 @@ typedef enum
     ECE_RC_BADAUTH,
     ECE_RC_TIMEOUT,
     ECE_RC_BADRESPONSE,
+    ECE_RC_INVALIDCERT,
     ECE_RC_FAILED,
     ECE_RC_SYSERR,
     ECE_RC_GENERIC
